--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "secure": "nsp check",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
-    "unit": "mocha src/*-spec.js"
+    "unit": "mocha src/*spec.js"
   },
   "devDependencies": {
     "ban-sensitive-files": "1.8.4",
