--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "secure": "nsp check",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
-    "unit": "mocha src/*spec.js"
+    "unit": "mocha src/*spec.js",
+    "bump": "next-ver --go"
   },
   "devDependencies": {
     "ban-sensitive-files": "1.8.4",
@@ -64,6 +65,7 @@
     "git-issues": "1.3.1",
     "license-checker": "8.0.3",
     "mocha": "3.2.0",
+    "next-ver": "1.5.0",
     "nsp": "2.6.2",
     "pre-git": "3.12.0",
     "standard": "8.6.0"
