--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "files": [
     "src/*.js",
-    "!src/*-spec.js"
+    "!src/*spec.js"
   ],
   "homepage": "https://github.com/bahmutov/version-remix-test#readme",
   "keywords": [
