--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "version-remix-test",
   "description": "Test project for tool version-remix",
-  "version": "1.2.0-with-ac43ac1",
+  "version": "1.2.0-plus-ac43ac1",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bugs": "https://github.com/bahmutov/version-remix-test/issues",
   "config": {
